adicionando o arquivo novamente index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="index.js"></script>
 </head>
 <body>
+    <h1>titulo</h1>
+
+    <div>
+        <p>Paragrafo 1</p>
+    </div>
     
 </body>
 </html>
